test-cases/negative/test_116_invalid_number.lay
# negative test: invalid number format
# expected: lexer should catch this

the variable x of type Number is 12.34.56


